# kubenotes

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
app/: main.py
app/api/: notes.py
app/config/: settings.py
backend/: main.py  openapi_spec.yaml
backend/app/: main.py
backend/app/api/: notes.py
backend/app/config/: settings.py
backend/db/: mongodb_service.py
frontend/.streamlit/: config.toml
frontend/app/: main.py
